--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-seo": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3"
