--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.4.19",
     "next-seo": "^6.1.0",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-owl-carousel": "^2.3.3",
