--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3"
