--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.1.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0"
   }
 }
