--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.1.2",
+    "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0"
   }
