--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.1.2",
     "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.4.0",
     "redux-persist": "^6.0.0"
   }
 }
