--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/google.analytics": "^0.0.44",
+    "@types/googletag": "^3.0.5",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
